[package]
name = "ws-echo-server"
version = "0.1.0"
authors = ["One <one.bgz1@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = { version = "0.26.1", features = ["rustls-tls-webpki-roots"] }
